--- a/css/main.css
+++ b/css/main.css
@@ -594,8 +594,12 @@ video {
   margin-bottom: 2.5rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.mb-24 {
+  margin-bottom: 6rem;
+}
+
+.mb-16 {
+  margin-bottom: 4rem;
 }
 
 .block {
@@ -646,6 +650,14 @@ video {
   max-width: 42rem;
 }
 
+.shrink-0 {
+  flex-shrink: 0;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -670,10 +682,6 @@ video {
   justify-content: space-between;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .space-x-10 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(2.5rem * var(--tw-space-x-reverse));
@@ -686,6 +694,12 @@ video {
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .self-end {
   align-self: flex-end;
 }
@@ -694,8 +708,16 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .border {
   border-width: 1px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
 }
 
 .border-none {
@@ -707,6 +729,16 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
+.border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
+
+.border-b-gray-200 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -715,6 +747,11 @@ video {
 .bg-cardColor {
   --tw-bg-opacity: 1;
   background-color: rgb(18 18 18 / var(--tw-bg-opacity));
+}
+
+.bg-lightBlue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(38 0 254 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#0d37a1\] {
@@ -752,6 +789,11 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .pt-4 {
   padding-top: 1rem;
 }
@@ -760,12 +802,8 @@ video {
   padding-bottom: 1rem;
 }
 
-.pr-14 {
-  padding-right: 3.5rem;
-}
-
-.pr-8 {
-  padding-right: 2rem;
+.pr-4 {
+  padding-right: 1rem;
 }
 
 .text-center {
@@ -776,8 +814,13 @@ video {
   font-family: Merriweather;
 }
 
-.text-5xl {
-  font-size: 3rem;
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
   line-height: 1;
 }
 
@@ -785,14 +828,9 @@ video {
   font-size: 18px;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .font-bold {
@@ -803,20 +841,16 @@ video {
   font-weight: 600;
 }
 
-.font-\[800\] {
-  font-weight: 800;
-}
-
 .font-medium {
   font-weight: 500;
 }
 
-.leading-tight {
-  line-height: 1.25;
+.font-\[600\] {
+  font-weight: 600;
 }
 
-.leading-loose {
-  line-height: 2;
+.leading-tight {
+  line-height: 1.25;
 }
 
 .text-overlay {
@@ -824,9 +858,14 @@ video {
   color: rgb(242 243 246 / var(--tw-text-opacity));
 }
 
-.text-darkBlue {
+.text-white {
   --tw-text-opacity: 1;
-  color: rgb(66 77 248 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-lightBlue {
+  --tw-text-opacity: 1;
+  color: rgb(38 0 254 / var(--tw-text-opacity));
 }
 
 .text-medBlue {
@@ -834,35 +873,14 @@ video {
   color: rgb(0 3 61 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-cc {
-  --tw-text-opacity: 1;
-  color: rgb(47 47 47 / var(--tw-text-opacity));
-}
-
 .text-gray-100 {
   --tw-text-opacity: 1;
   color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
 .drop-shadow-md {
   --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.backdrop-blur-xl {
-  --tw-backdrop-blur: blur(24px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 html {
@@ -871,6 +889,10 @@ html {
 
 a {
   transition: 0.5ms ease-in;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 #button-apply:hover {
@@ -1003,6 +1025,15 @@ a {
   --curve: 40;
 }
 
+.link {
+  transition: border 0.1s ease;
+}
+
+.link:hover {
+  border-bottom: 2px solid #2600fe;
+  font-weight: 500;
+}
+
 /* .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -1063,6 +1094,7 @@ h1:last-of-type {
 }
 
 .box p {
+  margin-top: 5px;
   color: var(--grayishBlue);
 }
 
@@ -1172,7 +1204,7 @@ div.seperator {
 
 .faq-list > div {
   border-bottom: 0.07em solid #ededed;
-  padding: 1.5em 0em;
+  padding: 32px 0em;
   /* font-weight: regular; */
 }
 
@@ -1192,6 +1224,7 @@ summary {
   font-size: 1.4em;
   font-weight: 500;
   height: auto;
+  margin-bottom: 5px;
   /* padding: 100px; */
   cursor: pointer;
   -webkit-touch-callout: none;
@@ -1278,6 +1311,93 @@ summary:after {
   margin: 30px auto;
 }
 
+.faq-content {
+  margin-top: 10px;
+}
+
+/* code for footer */
+
+.footer {
+  background: #000;
+  padding: 15px 0px;
+  text-align: center;
+}
+
+.footer .row {
+  width: 100%;
+  margin: 1% 0%;
+  padding: 0.6% 0%;
+  color: gray;
+  font-size: 0.8em;
+}
+
+#facebook:hover {
+  color: blue;
+}
+
+#instagram:hover {
+  color: violet;
+}
+
+#youtube:hover {
+  color: red;
+}
+
+#twitter:hover {
+  color: powderblue;
+}
+
+.footer .row a {
+  text-decoration: none;
+  color: gray;
+  transition: 0.5s;
+}
+
+.footer .row a:hover {
+  color: #fff;
+}
+
+.footer .row ul {
+  width: 100%;
+}
+
+.footer .row ul li {
+  display: inline-block;
+  margin: 0px 30px;
+}
+
+.footer .row a i {
+  font-size: 2em;
+  margin: 0% 1%;
+}
+
+@media (max-width: 720px) {
+  .footer {
+    text-align: left;
+    padding: 5%;
+  }
+
+  .footer .row ul li {
+    display: block;
+    margin: 10px 0px;
+    text-align: left;
+  }
+
+  .footer .row a i {
+    margin: 0% 3%;
+  }
+}
+
+.hover\:bg-blue-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-medBlue:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 3 61 / var(--tw-bg-opacity));
+}
+
 .hover\:font-semibold:hover {
   font-weight: 600;
 }
@@ -1287,9 +1407,9 @@ summary:after {
   color: hsl(227 12% 61% / var(--tw-text-opacity));
 }
 
-.hover\:text-gray-100:hover {
+.hover\:text-white:hover {
   --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .focus\:outline-none:focus {
@@ -1312,7 +1432,18 @@ summary:after {
     display: none;
   }
 
-  .md\:w-1\/3 {
-    width: 33.333333%;
+  .md\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .md\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
