--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700&display=swap");
 
-/* ! tailwindcss v3.2.4 | MIT License | https://tailwindcss.com */
+/*
+! tailwindcss v3.2.4 | MIT License | https://tailwindcss.com
+*/
 
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
@@ -419,7 +421,7 @@ video {
   display: none;
 }
 
-*, ::before, ::after {
+*, ::before, ::after{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -466,7 +468,7 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-::backdrop {
+::backdrop{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -513,378 +515,530 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.container {
+.container{
   width: 100%;
 }
 
-@media (min-width: 480px) {
-  .container {
+@media (min-width: 480px){
+  .container{
     max-width: 480px;
   }
 }
 
-@media (min-width: 768px) {
-  .container {
+@media (min-width: 768px){
+  .container{
     max-width: 768px;
   }
 }
 
-@media (min-width: 976px) {
-  .container {
+@media (min-width: 976px){
+  .container{
     max-width: 976px;
   }
 }
 
-@media (min-width: 1440px) {
-  .container {
+@media (min-width: 1440px){
+  .container{
     max-width: 1440px;
   }
 }
 
-.fixed {
+.fixed{
   position: fixed;
 }
 
-.absolute {
+.absolute{
   position: absolute;
 }
 
-.top-0 {
+.relative{
+  position: relative;
+}
+
+.top-0{
   top: 0px;
 }
 
-.left-0 {
+.left-0{
   left: 0px;
 }
 
-.right-0 {
+.right-0{
   right: 0px;
 }
 
-.right-6 {
+.right-6{
   right: 1.5rem;
 }
 
-.z-50 {
+.top-6{
+  top: 1.5rem;
+}
+
+.top-16{
+  top: 4rem;
+}
+
+.left-\[80px\]{
+  left: 80px;
+}
+
+.top-40{
+  top: 10rem;
+}
+
+.left-4{
+  left: 1rem;
+}
+
+.-top-4{
+  top: -1rem;
+}
+
+.-right-6{
+  right: -1.5rem;
+}
+
+.z-50{
   z-index: 50;
 }
 
-.mx-auto {
+.mx-auto{
   margin-left: auto;
   margin-right: auto;
 }
 
-.mt-10 {
+.mt-10{
   margin-top: 2.5rem;
 }
 
-.ml-24 {
+.ml-24{
   margin-left: 6rem;
 }
 
-.ml-\[100px\] {
+.ml-\[100px\]{
   margin-left: 100px;
 }
 
-.mt-8 {
+.mt-8{
   margin-top: 2rem;
 }
 
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
-.mb-24 {
+.mb-24{
   margin-bottom: 6rem;
 }
 
-.mb-16 {
+.mt-2{
+  margin-top: 0.5rem;
+}
+
+.mb-16{
   margin-bottom: 4rem;
 }
 
-.block {
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
+.mt-20{
+  margin-top: 5rem;
+}
+
+.block{
   display: block;
 }
 
-.flex {
+.flex{
   display: flex;
 }
 
-.hidden {
+.hidden{
   display: none;
 }
 
-.h-\[100vh\] {
+.h-\[100vh\]{
   height: 100vh;
 }
 
-.h-\[50px\] {
+.h-\[50px\]{
   height: 50px;
 }
 
-.h-\[45px\] {
+.h-\[45px\]{
   height: 45px;
 }
 
-.w-\[250px\] {
+.h-\[50vh\]{
+  height: 50vh;
+}
+
+.h-40{
+  height: 10rem;
+}
+
+.h-36{
+  height: 9rem;
+}
+
+.h-\[500px\]{
+  height: 500px;
+}
+
+.h-full{
+  height: 100%;
+}
+
+.h-\[50vg\]{
+  height: 50vg;
+}
+
+.h-\[80vh\]{
+  height: 80vh;
+}
+
+.w-\[250px\]{
   width: 250px;
 }
 
-.w-1\/2 {
+.w-1\/2{
   width: 50%;
 }
 
-.w-\[130px\] {
+.w-\[130px\]{
   width: 130px;
 }
 
-.w-full {
+.w-full{
   width: 100%;
 }
 
-.w-64 {
+.w-64{
   width: 16rem;
 }
 
-.max-w-2xl {
+.w-40{
+  width: 10rem;
+}
+
+.w-auto{
+  width: auto;
+}
+
+.w-\[300px\]{
+  width: 300px;
+}
+
+.w-\[700px\]{
+  width: 700px;
+}
+
+.max-w-2xl{
   max-width: 42rem;
 }
 
-.shrink-0 {
+.max-w-\[200px\]{
+  max-width: 200px;
+}
+
+.shrink-0{
   flex-shrink: 0;
 }
 
-.cursor-pointer {
+.cursor-pointer{
   cursor: pointer;
 }
 
-.flex-row {
+.flex-row{
   flex-direction: row;
 }
 
-.flex-col {
+.flex-col{
   flex-direction: column;
 }
 
-.items-center {
+.items-center{
   align-items: center;
 }
 
-.justify-end {
+.justify-end{
   justify-content: flex-end;
 }
 
-.justify-center {
+.justify-center{
   justify-content: center;
 }
 
-.justify-between {
+.justify-between{
   justify-content: space-between;
 }
 
-.space-x-10 > :not([hidden]) ~ :not([hidden]) {
+.space-x-10 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(2.5rem * var(--tw-space-x-reverse));
   margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+.space-y-6 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
-.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+.space-x-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.self-end {
+.self-end{
   align-self: flex-end;
 }
 
-.rounded-md {
+.rounded-md{
   border-radius: 0.375rem;
 }
 
-.rounded-full {
+.rounded-full{
   border-radius: 9999px;
 }
 
-.border {
+.border{
   border-width: 1px;
 }
 
-.border-b {
+.border-b{
   border-bottom-width: 1px;
 }
 
-.border-none {
+.border-none{
   border-style: none;
 }
 
-.border-black {
+.border-black{
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.border-gray-500 {
+.border-gray-500{
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
-.border-b-gray-200 {
+.border-b-gray-200{
   --tw-border-opacity: 1;
   border-bottom-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
-.bg-white {
+.bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-cardColor {
+.bg-cardColor{
   --tw-bg-opacity: 1;
   background-color: rgb(18 18 18 / var(--tw-bg-opacity));
 }
 
-.bg-lightBlue {
+.bg-lightBlue{
   --tw-bg-opacity: 1;
   background-color: rgb(38 0 254 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#0d37a1\] {
+.bg-\[\#0d37a1\]{
   --tw-bg-opacity: 1;
   background-color: rgb(13 55 161 / var(--tw-bg-opacity));
 }
 
-.bg-gray-800 {
+.bg-\[\#e1ef5e\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(225 239 94 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+}
+
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-gray-800{
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
-.px-4 {
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.p-2{
+  padding: 0.5rem;
+}
+
+.px-4{
   padding-left: 1rem;
   padding-right: 1rem;
 }
 
-.py-8 {
+.py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
 
-.px-8 {
+.px-8{
   padding-left: 2rem;
   padding-right: 2rem;
 }
 
-.py-1 {
+.py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
 
-.py-2 {
+.py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
 
-.px-3 {
+.px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
 
-.pt-4 {
+.pt-4{
   padding-top: 1rem;
 }
 
-.pb-4 {
+.pb-4{
   padding-bottom: 1rem;
 }
 
-.pr-4 {
+.pr-4{
   padding-right: 1rem;
 }
 
-.text-center {
+.pt-12{
+  padding-top: 3rem;
+}
+
+.pt-24{
+  padding-top: 6rem;
+}
+
+.pt-44{
+  padding-top: 11rem;
+}
+
+.pt-40{
+  padding-top: 10rem;
+}
+
+.pt-36{
+  padding-top: 9rem;
+}
+
+.pt-32{
+  padding-top: 8rem;
+}
+
+.pt-28{
+  padding-top: 7rem;
+}
+
+.text-center{
   text-align: center;
 }
 
-.font-body {
+.font-body{
   font-family: Merriweather;
 }
 
-.text-xs {
+.text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
 }
 
-.text-6xl {
+.text-6xl{
   font-size: 3.75rem;
   line-height: 1;
 }
 
-.text-\[18px\] {
+.text-\[18px\]{
   font-size: 18px;
 }
 
-.text-5xl {
+.text-5xl{
   font-size: 3rem;
   line-height: 1;
 }
 
-.font-bold {
+.text-\[16px\]{
+  font-size: 16px;
+}
+
+.font-bold{
   font-weight: 700;
 }
 
-.font-semibold {
+.font-semibold{
   font-weight: 600;
 }
 
-.font-medium {
+.font-medium{
   font-weight: 500;
 }
 
-.font-\[600\] {
+.font-\[600\]{
   font-weight: 600;
 }
 
-.leading-tight {
+.font-extrabold{
+  font-weight: 800;
+}
+
+.font-light{
+  font-weight: 300;
+}
+
+.font-black{
+  font-weight: 900;
+}
+
+.leading-tight{
   line-height: 1.25;
 }
 
-.text-overlay {
+.text-overlay{
   --tw-text-opacity: 1;
   color: rgb(242 243 246 / var(--tw-text-opacity));
 }
 
-.text-white {
+.text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-lightBlue {
+.text-lightBlue{
   --tw-text-opacity: 1;
   color: rgb(38 0 254 / var(--tw-text-opacity));
 }
 
-.text-medBlue {
+.text-medBlue{
   --tw-text-opacity: 1;
   color: rgb(0 3 61 / var(--tw-text-opacity));
 }
 
-.text-gray-100 {
+.text-gray-100{
   --tw-text-opacity: 1;
   color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
-.drop-shadow-md {
+.drop-shadow-md{
   --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-html {
-  scroll-behavior: smooth;
 }
 
 a {
@@ -1065,6 +1219,7 @@ html {
   color: hsl(228, 45%, 44%);
 }
 
+/* 
 h1:first-of-type {
   font-weight: var(--weight1);
   color: var(--varyDarkBlue);
@@ -1078,7 +1233,7 @@ h1:last-of-type {
   h1 {
     font-size: 1.5rem;
   }
-}
+} */
 
 .header {
   text-align: center;
@@ -1195,7 +1350,7 @@ h2 {
   text-align: center;
 }
 
-div.seperator {
+.seperator {
   width: 7.5em;
   background-color: blue;
   height: 0.17em;
@@ -1388,61 +1543,66 @@ summary:after {
   }
 }
 
-.hover\:bg-blue-400:hover {
+.hover\:bg-blue-400:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-medBlue:hover {
+.hover\:bg-medBlue:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(0 3 61 / var(--tw-bg-opacity));
 }
 
-.hover\:font-semibold:hover {
+.hover\:bg-veryDarkBlue:hover{
+  --tw-bg-opacity: 1;
+  background-color: hsl(233 12% 13% / var(--tw-bg-opacity));
+}
+
+.hover\:font-semibold:hover{
   font-weight: 600;
 }
 
-.hover\:text-darkGrayishBlue:hover {
+.hover\:text-darkGrayishBlue:hover{
   --tw-text-opacity: 1;
   color: hsl(227 12% 61% / var(--tw-text-opacity));
 }
 
-.hover\:text-white:hover {
+.hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.focus\:outline-none:focus {
+.focus\:outline-none:focus{
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
 
-@media (min-width: 480px) {
-  .sm\:self-center {
+@media (min-width: 480px){
+  .sm\:self-center{
     align-self: center;
   }
 }
 
-@media (min-width: 768px) {
-  .md\:flex {
+@media (min-width: 768px){
+  .md\:flex{
     display: flex;
   }
 
-  .md\:hidden {
+  .md\:hidden{
     display: none;
   }
 
-  .md\:py-2 {
+  .md\:py-2{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
   }
 
-  .md\:px-6 {
+  .md\:px-6{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
 
-  .md\:text-sm {
+  .md\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
