--- a/input.css
+++ b/input.css
@@ -1,10 +1,7 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html {
-  scroll-behavior: smooth;
-}
 a {
   transition: 0.5ms ease-in;
 }
@@ -172,7 +169,7 @@ html {
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
-
+/* 
 h1:first-of-type {
   font-weight: var(--weight1);
   color: var(--varyDarkBlue);
@@ -186,7 +183,7 @@ h1:last-of-type {
   h1 {
     font-size: 1.5rem;
   }
-}
+} */
 
 .header {
   text-align: center;
@@ -296,7 +293,7 @@ h2 {
   text-align: center;
 }
 
-div.seperator {
+.seperator {
   width: 7.5em;
   background-color: blue;
   height: 0.17em;
