--- a/css/main.css
+++ b/css/main.css
@@ -599,6 +599,10 @@ video {
   right: -1.5rem;
 }
 
+.right-4{
+  right: 1rem;
+}
+
 .z-50{
   z-index: 50;
 }
@@ -608,20 +612,33 @@ video {
   margin-right: auto;
 }
 
+.-mx-3{
+  margin-left: -0.75rem;
+  margin-right: -0.75rem;
+}
+
+.ml-36{
+  margin-left: 9rem;
+}
+
 .mt-10{
   margin-top: 2.5rem;
 }
 
-.ml-24{
-  margin-left: 6rem;
+.ml-16{
+  margin-left: 4rem;
 }
 
-.ml-\[100px\]{
-  margin-left: 100px;
+.mt-40{
+  margin-top: 10rem;
 }
 
-.mt-8{
-  margin-top: 2rem;
+.mt-4{
+  margin-top: 1rem;
+}
+
+.mt-16{
+  margin-top: 4rem;
 }
 
 .mb-24{
@@ -636,12 +653,40 @@ video {
   margin-bottom: 4rem;
 }
 
+.mt-12{
+  margin-top: 3rem;
+}
+
 .mb-10{
   margin-bottom: 2.5rem;
 }
 
 .mt-20{
   margin-top: 5rem;
+}
+
+.mb-12{
+  margin-bottom: 3rem;
+}
+
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
+.mb-3{
+  margin-bottom: 0.75rem;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
+}
+
+.mt-6{
+  margin-top: 1.5rem;
 }
 
 .block{
@@ -660,16 +705,12 @@ video {
   height: 100vh;
 }
 
-.h-\[50px\]{
-  height: 50px;
+.h-\[80vh\]{
+  height: 80vh;
 }
 
-.h-\[45px\]{
-  height: 45px;
-}
-
-.h-\[50vh\]{
-  height: 50vh;
+.h-full{
+  height: 100%;
 }
 
 .h-40{
@@ -684,36 +725,44 @@ video {
   height: 500px;
 }
 
-.h-full{
-  height: 100%;
+.h-\[50vh\]{
+  height: 50vh;
 }
 
-.h-\[50vg\]{
-  height: 50vg;
+.h-\[40vh\]{
+  height: 40vh;
 }
 
-.h-\[80vh\]{
-  height: 80vh;
+.h-\[490px\]{
+  height: 490px;
+}
+
+.h-auto{
+  height: auto;
+}
+
+.h-\[400px\]{
+  height: 400px;
+}
+
+.h-2\/3{
+  height: 66.666667%;
 }
 
 .w-\[250px\]{
   width: 250px;
 }
 
-.w-1\/2{
-  width: 50%;
-}
-
-.w-\[130px\]{
-  width: 130px;
-}
-
 .w-full{
   width: 100%;
 }
 
-.w-64{
-  width: 16rem;
+.w-1\/2{
+  width: 50%;
+}
+
+.w-\[300px\]{
+  width: 300px;
 }
 
 .w-40{
@@ -724,20 +773,40 @@ video {
   width: auto;
 }
 
-.w-\[300px\]{
-  width: 300px;
-}
-
 .w-\[700px\]{
   width: 700px;
 }
 
-.max-w-2xl{
-  max-width: 42rem;
+.w-\[800px\]{
+  width: 800px;
+}
+
+.w-\[350px\]{
+  width: 350px;
+}
+
+.w-\[320px\]{
+  width: 320px;
+}
+
+.w-1\/3{
+  width: 33.333333%;
+}
+
+.max-w-md{
+  max-width: 28rem;
+}
+
+.max-w-sm{
+  max-width: 24rem;
 }
 
 .max-w-\[200px\]{
   max-width: 200px;
+}
+
+.max-w-lg{
+  max-width: 32rem;
 }
 
 .shrink-0{
@@ -748,16 +817,38 @@ video {
   cursor: pointer;
 }
 
+.appearance-none{
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
 .flex-row{
   flex-direction: row;
+}
+
+.flex-row-reverse{
+  flex-direction: row-reverse;
 }
 
 .flex-col{
   flex-direction: column;
 }
 
+.flex-wrap{
+  flex-wrap: wrap;
+}
+
+.items-start{
+  align-items: flex-start;
+}
+
 .items-center{
   align-items: center;
+}
+
+.justify-start{
+  justify-content: flex-start;
 }
 
 .justify-end{
@@ -772,10 +863,23 @@ video {
   justify-content: space-between;
 }
 
-.space-x-10 > :not([hidden]) ~ :not([hidden]){
+.gap-8{
+  gap: 2rem;
+}
+
+.gap-4{
+  gap: 1rem;
+}
+
+.gap-x-8{
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
+
+.space-x-8 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
-  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+  margin-right: calc(2rem * var(--tw-space-x-reverse));
+  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-6 > :not([hidden]) ~ :not([hidden]){
@@ -790,28 +894,48 @@ video {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.space-y-8 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
+.space-y-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.space-x-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .self-end{
   align-self: flex-end;
+}
+
+.overflow-hidden{
+  overflow: hidden;
 }
 
 .rounded-md{
   border-radius: 0.375rem;
 }
 
-.rounded-full{
-  border-radius: 9999px;
+.rounded{
+  border-radius: 0.25rem;
 }
 
 .border{
   border-width: 1px;
-}
-
-.border-b{
-  border-bottom-width: 1px;
-}
-
-.border-none{
-  border-style: none;
 }
 
 .border-black{
@@ -819,14 +943,19 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
+.border-textBlue{
+  --tw-border-opacity: 1;
+  border-color: rgb(1 17 69 / var(--tw-border-opacity));
+}
+
 .border-gray-500{
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
-.border-b-gray-200{
+.border-gray-300{
   --tw-border-opacity: 1;
-  border-bottom-color: rgb(229 231 235 / var(--tw-border-opacity));
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
 .bg-white{
@@ -834,24 +963,18 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-cardColor{
-  --tw-bg-opacity: 1;
-  background-color: rgb(18 18 18 / var(--tw-bg-opacity));
+.bg-transparent{
+  background-color: transparent;
 }
 
-.bg-lightBlue{
+.bg-\[\#0C6980\]{
   --tw-bg-opacity: 1;
-  background-color: rgb(38 0 254 / var(--tw-bg-opacity));
+  background-color: rgb(12 105 128 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#0d37a1\]{
+.bg-slate-100{
   --tw-bg-opacity: 1;
-  background-color: rgb(13 55 161 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#e1ef5e\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(225 239 94 / var(--tw-bg-opacity));
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
 
 .bg-yellow-400{
@@ -869,6 +992,26 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#cef5ee\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(206 245 238 / var(--tw-bg-opacity));
+}
+
+.bg-gray-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.bg-accent{
+  --tw-bg-opacity: 1;
+  background-color: rgb(1 211 175 / var(--tw-bg-opacity));
+}
+
+.object-contain{
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -876,6 +1019,10 @@ video {
 
 .p-2{
   padding: 0.5rem;
+}
+
+.p-4{
+  padding: 1rem;
 }
 
 .px-4{
@@ -903,9 +1050,29 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .pt-4{
@@ -920,32 +1087,16 @@ video {
   padding-right: 1rem;
 }
 
+.pb-2{
+  padding-bottom: 0.5rem;
+}
+
 .pt-12{
   padding-top: 3rem;
 }
 
-.pt-24{
-  padding-top: 6rem;
-}
-
-.pt-44{
-  padding-top: 11rem;
-}
-
-.pt-40{
-  padding-top: 10rem;
-}
-
-.pt-36{
-  padding-top: 9rem;
-}
-
-.pt-32{
-  padding-top: 8rem;
-}
-
-.pt-28{
-  padding-top: 7rem;
+.text-left{
+  text-align: left;
 }
 
 .text-center{
@@ -961,22 +1112,45 @@ video {
   line-height: 1rem;
 }
 
-.text-6xl{
-  font-size: 3.75rem;
+.text-5xl{
+  font-size: 3rem;
   line-height: 1;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-\[16px\]{
+  font-size: 16px;
 }
 
 .text-\[18px\]{
   font-size: 18px;
 }
 
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
-.text-\[16px\]{
-  font-size: 16px;
+.text-\[20px\]{
+  font-size: 20px;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.font-\[600\]{
+  font-weight: 600;
 }
 
 .font-bold{
@@ -991,11 +1165,7 @@ video {
   font-weight: 500;
 }
 
-.font-\[600\]{
-  font-weight: 600;
-}
-
-.font-extrabold{
+.font-\[800\]{
   font-weight: 800;
 }
 
@@ -1007,8 +1177,21 @@ video {
   font-weight: 900;
 }
 
+.uppercase{
+  text-transform: uppercase;
+}
+
 .leading-tight{
   line-height: 1.25;
+}
+
+.tracking-wide{
+  letter-spacing: 0.025em;
+}
+
+.text-textBlue{
+  --tw-text-opacity: 1;
+  color: rgb(1 17 69 / var(--tw-text-opacity));
 }
 
 .text-overlay{
@@ -1021,14 +1204,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-lightBlue{
-  --tw-text-opacity: 1;
-  color: rgb(38 0 254 / var(--tw-text-opacity));
-}
-
 .text-medBlue{
   --tw-text-opacity: 1;
   color: rgb(0 3 61 / var(--tw-text-opacity));
+}
+
+.text-darkBlue{
+  --tw-text-opacity: 1;
+  color: rgb(1 16 76 / var(--tw-text-opacity));
 }
 
 .text-gray-100{
@@ -1036,9 +1219,36 @@ video {
   color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
+.text-\[\#f57456\]{
+  --tw-text-opacity: 1;
+  color: rgb(245 116 86 / var(--tw-text-opacity));
+}
+
+.text-\[\#242424\]{
+  --tw-text-opacity: 1;
+  color: rgb(36 36 36 / var(--tw-text-opacity));
+}
+
+.text-veryDarkBlue{
+  --tw-text-opacity: 1;
+  color: hsl(233 12% 13% / var(--tw-text-opacity));
+}
+
+.shadow{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .drop-shadow-md{
   --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.backdrop-blur-md{
+  --tw-backdrop-blur: blur(12px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 a {
@@ -1184,8 +1394,8 @@ html {
 }
 
 .link:hover {
-  border-bottom: 2px solid #2600fe;
-  font-weight: 500;
+  border-bottom: 2px solid #01c0c4;
+  font-weight: 660;
 }
 
 /* .cards {
@@ -1203,7 +1413,7 @@ html {
   --orange: hsl(34, 97%, 64%);
   --blue: hsl(212, 86%, 64%);
   --varyDarkBlue: hsl(234, 12%, 34%);
-  --grayishBlue: hsl(229, 6%, 66%);
+  --grayishBlue: hsl(233, 7%, 76%);
   --veryLightGray: hsl(0, 0%, 98%);
   --weight1: 200;
   --weight2: 400;
@@ -1264,6 +1474,10 @@ h1:last-of-type {
   text-align: center;
   transition: box-shadow 0.3s ease-out;
   margin: 20px;
+}
+
+.box2 {
+  box-shadow: 0px 30px 40px -20px var(--grayishBlue);
 }
 
 .box-img {
@@ -1543,14 +1757,44 @@ summary:after {
   }
 }
 
-.hover\:bg-blue-400:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+#intro {
+  background-image: url("../img/bg.png");
+  background-size: 1300px 700px;
+  background-repeat: no-repeat;
+  /* object-fit: contain; */
 }
 
-.hover\:bg-medBlue:hover{
+.navbarColor {
+  transition: all 0.1s ease;
+  background-color: white;
+  border-bottom: 1.2px solid rgb(216, 216, 216);
+}
+
+/* form */
+
+/* .color {
+  box-shadow: 0px 30px 40px -20px var(--grayishBlue);
+  background-image: linear-gradient(
+    to bottom,
+    #0fcab2,
+    #00d2ac,
+    #00d9a3,
+    #00e097,
+    #1ee789
+  );
+}
+.form {
+  box-shadow: 0px 30px 40px -20px var(--grayishBlue);
+} */
+
+.hover\:bg-accent:hover{
   --tw-bg-opacity: 1;
-  background-color: rgb(0 3 61 / var(--tw-bg-opacity));
+  background-color: rgb(1 211 175 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#084352\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(8 67 82 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-veryDarkBlue:hover{
@@ -1558,18 +1802,19 @@ summary:after {
   background-color: hsl(233 12% 13% / var(--tw-bg-opacity));
 }
 
-.hover\:font-semibold:hover{
-  font-weight: 600;
-}
-
-.hover\:text-darkGrayishBlue:hover{
-  --tw-text-opacity: 1;
-  color: hsl(227 12% 61% / var(--tw-text-opacity));
-}
-
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.focus\:border-gray-500:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
+
+.focus\:bg-white:focus{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .focus\:outline-none:focus{
@@ -1584,6 +1829,10 @@ summary:after {
 }
 
 @media (min-width: 768px){
+  .md\:mb-0{
+    margin-bottom: 0px;
+  }
+
   .md\:flex{
     display: flex;
   }
@@ -1592,14 +1841,45 @@ summary:after {
     display: none;
   }
 
+  .md\:w-1\/2{
+    width: 50%;
+  }
+
+  .md\:w-1\/3{
+    width: 33.333333%;
+  }
+
+  .md\:flex-row{
+    flex-direction: row;
+  }
+
+  .md\:gap-16{
+    gap: 4rem;
+  }
+
+  .md\:gap-x-16{
+    -moz-column-gap: 4rem;
+         column-gap: 4rem;
+  }
+
   .md\:py-2{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
   }
 
+  .md\:px-4{
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
   .md\:px-6{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  .md\:py-20{
+    padding-top: 5rem;
+    padding-bottom: 5rem;
   }
 
   .md\:text-sm{
