--- a/css/main.css
+++ b/css/main.css
@@ -519,9 +519,9 @@ video {
   width: 100%;
 }
 
-@media (min-width: 480px){
+@media (min-width: 576px){
   .container{
-    max-width: 480px;
+    max-width: 576px;
   }
 }
 
@@ -531,15 +531,15 @@ video {
   }
 }
 
-@media (min-width: 976px){
+@media (min-width: 992px){
   .container{
-    max-width: 976px;
+    max-width: 992px;
   }
 }
 
-@media (min-width: 1440px){
+@media (min-width: 1200px){
   .container{
-    max-width: 1440px;
+    max-width: 1200px;
   }
 }
 
@@ -612,6 +612,11 @@ video {
   margin-right: auto;
 }
 
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .-mx-3{
   margin-left: -0.75rem;
   margin-right: -0.75rem;
@@ -661,6 +666,10 @@ video {
   margin-bottom: 2.5rem;
 }
 
+.mb-3{
+  margin-bottom: 0.75rem;
+}
+
 .mt-20{
   margin-top: 5rem;
 }
@@ -675,10 +684,6 @@ video {
 
 .mb-2{
   margin-bottom: 0.5rem;
-}
-
-.mb-3{
-  margin-bottom: 0.75rem;
 }
 
 .mb-4{
@@ -723,6 +728,10 @@ video {
 
 .h-\[500px\]{
   height: 500px;
+}
+
+.h-px{
+  height: 1px;
 }
 
 .h-\[50vh\]{
@@ -777,6 +786,10 @@ video {
   width: 700px;
 }
 
+.w-2\/3{
+  width: 66.666667%;
+}
+
 .w-\[800px\]{
   width: 800px;
 }
@@ -797,10 +810,6 @@ video {
   max-width: 28rem;
 }
 
-.max-w-sm{
-  max-width: 24rem;
-}
-
 .max-w-\[200px\]{
   max-width: 200px;
 }
@@ -811,6 +820,10 @@ video {
 
 .shrink-0{
   flex-shrink: 0;
+}
+
+.transform{
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer{
@@ -863,6 +876,14 @@ video {
   justify-content: space-between;
 }
 
+.justify-evenly{
+  justify-content: space-evenly;
+}
+
+.gap-6{
+  gap: 1.5rem;
+}
+
 .gap-8{
   gap: 2rem;
 }
@@ -894,16 +915,16 @@ video {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-y-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-
 .space-y-8 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]){
@@ -936,6 +957,10 @@ video {
 
 .border{
   border-width: 1px;
+}
+
+.border-0{
+  border-width: 0px;
 }
 
 .border-black{
@@ -987,9 +1012,14 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-gray-800{
+.bg-\[\#0f6d6d\]{
   --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  background-color: rgb(15 109 109 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#242424\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(36 36 36 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#cef5ee\]{
@@ -1005,6 +1035,11 @@ video {
 .bg-accent{
   --tw-bg-opacity: 1;
   background-color: rgb(1 211 175 / var(--tw-bg-opacity));
+}
+
+.bg-gray-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
 .object-contain{
@@ -1087,6 +1122,14 @@ video {
   padding-right: 1rem;
 }
 
+.pt-7{
+  padding-top: 1.75rem;
+}
+
+.pb-10{
+  padding-bottom: 2.5rem;
+}
+
 .pb-2{
   padding-bottom: 0.5rem;
 }
@@ -1122,12 +1165,12 @@ video {
   line-height: 2.25rem;
 }
 
-.text-\[16px\]{
-  font-size: 16px;
+.text-\[20px\]{
+  font-size: 20px;
 }
 
-.text-\[18px\]{
-  font-size: 18px;
+.text-\[16px\]{
+  font-size: 16px;
 }
 
 .text-sm{
@@ -1135,8 +1178,8 @@ video {
   line-height: 1.25rem;
 }
 
-.text-\[20px\]{
-  font-size: 20px;
+.text-\[18px\]{
+  font-size: 18px;
 }
 
 .text-4xl{
@@ -1169,8 +1212,8 @@ video {
   font-weight: 800;
 }
 
-.font-light{
-  font-weight: 300;
+.font-normal{
+  font-weight: 400;
 }
 
 .font-black{
@@ -1179,6 +1222,10 @@ video {
 
 .uppercase{
   text-transform: uppercase;
+}
+
+.italic{
+  font-style: italic;
 }
 
 .leading-tight{
@@ -1214,9 +1261,14 @@ video {
   color: rgb(1 16 76 / var(--tw-text-opacity));
 }
 
-.text-gray-100{
+.text-\[\#242424\]{
   --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
+  color: rgb(36 36 36 / var(--tw-text-opacity));
+}
+
+.text-\[\#0fcab2\]{
+  --tw-text-opacity: 1;
+  color: rgb(15 202 178 / var(--tw-text-opacity));
 }
 
 .text-\[\#f57456\]{
@@ -1224,14 +1276,19 @@ video {
   color: rgb(245 116 86 / var(--tw-text-opacity));
 }
 
-.text-\[\#242424\]{
+.text-accent{
   --tw-text-opacity: 1;
-  color: rgb(36 36 36 / var(--tw-text-opacity));
+  color: rgb(1 211 175 / var(--tw-text-opacity));
 }
 
 .text-veryDarkBlue{
   --tw-text-opacity: 1;
   color: hsl(233 12% 13% / var(--tw-text-opacity));
+}
+
+.text-gray-100{
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
 .shadow{
@@ -1604,7 +1661,7 @@ summary {
 }
 
 summary:hover {
-  color: blue;
+  color: #0fcab2;
 }
 
 details[open] summary ~ * {
@@ -1624,11 +1681,11 @@ details[open] summary ~ * {
 }
 
 details[open] summary {
-  color: blue;
+  color: #0fcab2;
 }
 
 details[open] p {
-  border-left: 2px solid blue;
+  border-left: 2px solid #0fcab2;
   margin-left: 55px;
   padding-left: 25px;
   opacity: 100;
@@ -1665,7 +1722,7 @@ summary:after {
   background: transparent;
   border-radius: 0.3em;
   content: "+";
-  color: blue;
+  color: #0fcab2;
   float: left;
   font-size: 1.8em;
   font-weight: bold;
@@ -1687,7 +1744,7 @@ summary:after {
 /* code for footer */
 
 .footer {
-  background: #000;
+  /* background: #000; */
   padding: 15px 0px;
   text-align: center;
 }
@@ -1696,11 +1753,11 @@ summary:after {
   width: 100%;
   margin: 1% 0%;
   padding: 0.6% 0%;
-  color: gray;
+  /* color: gray; */
   font-size: 0.8em;
 }
 
-#facebook:hover {
+#linkedin:hover {
   color: blue;
 }
 
@@ -1718,7 +1775,7 @@ summary:after {
 
 .footer .row a {
   text-decoration: none;
-  color: gray;
+  /* color: gray; */
   transition: 0.5s;
 }
 
@@ -1822,7 +1879,7 @@ summary:after {
   outline-offset: 2px;
 }
 
-@media (min-width: 480px){
+@media (min-width: 576px){
   .sm\:self-center{
     align-self: center;
   }
@@ -1833,6 +1890,10 @@ summary:after {
     margin-bottom: 0px;
   }
 
+  .md\:block{
+    display: block;
+  }
+
   .md\:flex{
     display: flex;
   }
@@ -1841,12 +1902,25 @@ summary:after {
     display: none;
   }
 
+  .md\:w-fit{
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
   .md\:w-1\/2{
     width: 50%;
   }
 
   .md\:w-1\/3{
     width: 33.333333%;
+  }
+
+  .md\:w-full{
+    width: 100%;
+  }
+
+  .md\:max-w-full{
+    max-width: 100%;
   }
 
   .md\:flex-row{
@@ -1860,6 +1934,12 @@ summary:after {
   .md\:gap-x-16{
     -moz-column-gap: 4rem;
          column-gap: 4rem;
+  }
+
+  .md\:space-x-4 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .md\:py-2{
@@ -1882,8 +1962,33 @@ summary:after {
     padding-bottom: 5rem;
   }
 
+  .md\:pt-8{
+    padding-top: 2rem;
+  }
+
+  .md\:pt-24{
+    padding-top: 6rem;
+  }
+
+  .md\:pl-12{
+    padding-left: 3rem;
+  }
+
+  .md\:text-left{
+    text-align: left;
+  }
+
   .md\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .md\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .md\:leading-\[3\.4rem\]{
+    line-height: 3.4rem;
   }
 }
