about page done

--- a/css/main.css
+++ b/css/main.css
@@ -571,32 +571,16 @@ video {
   right: 1.5rem;
 }
 
-.top-6{
-  top: 1.5rem;
+.-left-64{
+  left: -16rem;
 }
 
-.top-16{
-  top: 4rem;
-}
-
-.left-\[80px\]{
-  left: 80px;
-}
-
-.top-40{
-  top: 10rem;
-}
-
-.left-4{
-  left: 1rem;
+.-right-64{
+  right: -16rem;
 }
 
 .-top-4{
   top: -1rem;
-}
-
-.-right-6{
-  right: -1.5rem;
 }
 
 .right-4{
@@ -625,6 +609,10 @@ video {
   margin-top: 2.5rem;
 }
 
+.mb-4{
+  margin-bottom: 1rem;
+}
+
 .ml-16{
   margin-left: 4rem;
 }
@@ -641,28 +629,8 @@ video {
   margin-top: 4rem;
 }
 
-.mb-24{
-  margin-bottom: 6rem;
-}
-
-.mt-2{
-  margin-top: 0.5rem;
-}
-
-.mb-16{
-  margin-bottom: 4rem;
-}
-
-.mt-12{
-  margin-top: 3rem;
-}
-
-.mb-10{
-  margin-bottom: 2.5rem;
-}
-
-.mb-3{
-  margin-bottom: 0.75rem;
+.mb-8{
+  margin-bottom: 2rem;
 }
 
 .mt-20{
@@ -681,12 +649,20 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.mb-4{
-  margin-bottom: 1rem;
+.mb-3{
+  margin-bottom: 0.75rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
 }
 
 .mt-6{
   margin-top: 1.5rem;
+}
+
+.mt-24{
+  margin-top: 6rem;
 }
 
 .block{
@@ -705,26 +681,6 @@ video {
   height: 100vh;
 }
 
-.h-\[80vh\]{
-  height: 80vh;
-}
-
-.h-full{
-  height: 100%;
-}
-
-.h-40{
-  height: 10rem;
-}
-
-.h-36{
-  height: 9rem;
-}
-
-.h-\[500px\]{
-  height: 500px;
-}
-
 .h-px{
   height: 1px;
 }
@@ -733,12 +689,12 @@ video {
   height: 40vh;
 }
 
-.h-\[490px\]{
-  height: 490px;
+.h-full{
+  height: 100%;
 }
 
-.h-auto{
-  height: auto;
+.h-\[590px\]{
+  height: 590px;
 }
 
 .h-\[400px\]{
@@ -747,6 +703,10 @@ video {
 
 .h-2\/3{
   height: 66.666667%;
+}
+
+.h-auto{
+  height: auto;
 }
 
 .w-\[250px\]{
@@ -761,36 +721,24 @@ video {
   width: 50%;
 }
 
-.w-\[300px\]{
-  width: 300px;
+.w-2\/3{
+  width: 66.666667%;
+}
+
+.w-56{
+  width: 14rem;
 }
 
 .w-40{
   width: 10rem;
 }
 
-.w-auto{
-  width: auto;
-}
-
-.w-\[700px\]{
-  width: 700px;
-}
-
-.w-2\/3{
-  width: 66.666667%;
-}
-
 .w-\[800px\]{
   width: 800px;
 }
 
-.w-\[350px\]{
-  width: 350px;
-}
-
-.w-\[320px\]{
-  width: 320px;
+.w-\[400px\]{
+  width: 400px;
 }
 
 .w-1\/3{
@@ -799,10 +747,6 @@ video {
 
 .max-w-md{
   max-width: 28rem;
-}
-
-.max-w-\[200px\]{
-  max-width: 200px;
 }
 
 .max-w-lg{
@@ -831,12 +775,12 @@ video {
   flex-direction: row;
 }
 
-.flex-row-reverse{
-  flex-direction: row-reverse;
-}
-
 .flex-col{
   flex-direction: column;
+}
+
+.flex-col-reverse{
+  flex-direction: column-reverse;
 }
 
 .flex-wrap{
@@ -944,6 +888,10 @@ video {
   border-width: 0px;
 }
 
+.border-t{
+  border-top-width: 1px;
+}
+
 .border-black{
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
@@ -959,9 +907,14 @@ video {
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
-.border-gray-300{
+.border-t-gray-200{
   --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+  border-top-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-b-gray-100{
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
 
 .bg-white{
@@ -978,21 +931,6 @@ video {
   background-color: rgb(12 105 128 / var(--tw-bg-opacity));
 }
 
-.bg-slate-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
-}
-
-.bg-yellow-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
-}
-
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#0f6d6d\]{
   --tw-bg-opacity: 1;
   background-color: rgb(15 109 109 / var(--tw-bg-opacity));
@@ -1003,9 +941,9 @@ video {
   background-color: rgb(36 36 36 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#cef5ee\]{
+.bg-\[\#eeefef\]{
   --tw-bg-opacity: 1;
-  background-color: rgb(206 245 238 / var(--tw-bg-opacity));
+  background-color: rgb(238 239 239 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100{
@@ -1018,54 +956,9 @@ video {
   background-color: rgb(1 211 175 / var(--tw-bg-opacity));
 }
 
-.bg-gray-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#e4fffa\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(228 255 250 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#f57456\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 116 86 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#ff9279\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 146 121 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#ffa692\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 166 146 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#ffdad1\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 218 209 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#282929\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(40 41 41 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#eeefef\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(238 239 239 / var(--tw-bg-opacity));
-}
-
 .object-contain{
   -o-object-fit: contain;
      object-fit: contain;
-}
-
-.object-cover{
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .object-fill{
@@ -1147,10 +1040,6 @@ video {
   padding-top: 1.75rem;
 }
 
-.pb-10{
-  padding-bottom: 2.5rem;
-}
-
 .pt-12{
   padding-top: 3rem;
 }
@@ -1192,11 +1081,6 @@ video {
 
 .text-\[16px\]{
   font-size: 16px;
-}
-
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 
 .text-2xl{
@@ -1268,11 +1152,6 @@ video {
   color: rgb(0 3 61 / var(--tw-text-opacity));
 }
 
-.text-darkBlue{
-  --tw-text-opacity: 1;
-  color: rgb(1 16 76 / var(--tw-text-opacity));
-}
-
 .text-\[\#242424\]{
   --tw-text-opacity: 1;
   color: rgb(36 36 36 / var(--tw-text-opacity));
@@ -1293,14 +1172,14 @@ video {
   color: rgb(245 116 86 / var(--tw-text-opacity));
 }
 
+.text-darkBlue{
+  --tw-text-opacity: 1;
+  color: rgb(1 16 76 / var(--tw-text-opacity));
+}
+
 .text-veryDarkBlue{
   --tw-text-opacity: 1;
   color: hsl(233 12% 13% / var(--tw-text-opacity));
-}
-
-.text-gray-100{
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
 .shadow{
@@ -1532,6 +1411,10 @@ h1:last-of-type {
   color: var(--grayishBlue);
 }
 
+.form {
+  box-shadow: 10px 30px 40px -20px var(--grayishBlue);
+}
+
 .box:hover {
   box-shadow: 0px 30px 40px -20px var(--varyDarkBlue);
 }
@@ -1757,7 +1640,7 @@ summary:after {
 
 .footer {
   /* background: #000; */
-  padding: 15px 0px;
+  padding: 10px 0px;
   text-align: center;
 }
 
@@ -1856,6 +1739,101 @@ summary:after {
   box-shadow: 0px 30px 40px -20px var(--grayishBlue);
 } */
 
+main {
+  min-width: 300px;
+  max-width: 500px;
+  margin: auto;
+  position: relative;
+}
+
+main p {
+  font-size: 1em;
+  line-height: 1.75em;
+  border-top: 3px solid;
+  -o-border-image: linear-gradient(
+    to right,
+    #0fcab2,
+    #51d5aa,
+    #78dfa2,
+    #9ce99c,
+    #bff197
+  );
+  border-image: linear-gradient(
+    to right,
+    #0fcab2,
+    #51d5aa,
+    #78dfa2,
+    #9ce99c,
+    #bff197
+  );
+  border-image-slice: 1;
+  /* border-width: 2px; */
+  margin: 0;
+  padding: 40px;
+  counter-increment: section;
+  position: relative;
+  color: #34435e;
+}
+
+main p:before {
+  content: counter(section);
+  position: absolute;
+  border-radius: 50%;
+  padding: 5px;
+  height: 30px;
+  width: 30px;
+  background-color: #2b444e;
+  text-align: center;
+  line-height: 1.25em;
+  color: #ffffff;
+  font-size: 1em;
+}
+
+main p:nth-child(odd) {
+  border-right: 2px solid;
+  /* border-bottom-right-radius: 100px; */
+  padding-left: 0;
+  border-left: none;
+}
+
+main p:nth-child(odd):before {
+  right: 0%;
+  margin-right: -15px;
+  margin-top: 15px;
+}
+
+main p:nth-child(even) {
+  border-left: 2px solid;
+  border-radius: 10px;
+  padding-right: 0;
+  border-right: none;
+}
+
+main p:nth-child(even):before {
+  left: 0%;
+  margin-left: -15px;
+  margin-top: 15px;
+}
+
+main p:first-child {
+  border-top: none;
+  border-left: none;
+}
+
+main p:last-child {
+  border-bottom: none;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+#service {
+  height: -moz-fit-content;
+  height: fit-content;
+  /* background-color: black; */
+  width: 100%;
+  padding: 50px 10px;
+}
+
 .hover\:bg-accent:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(1 211 175 / var(--tw-bg-opacity));
@@ -1866,9 +1844,9 @@ summary:after {
   background-color: rgb(8 67 82 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-veryDarkBlue:hover{
+.hover\:bg-\[\#37a697\]:hover{
   --tw-bg-opacity: 1;
-  background-color: hsl(233 12% 13% / var(--tw-bg-opacity));
+  background-color: rgb(55 166 151 / var(--tw-bg-opacity));
 }
 
 .hover\:text-white:hover{
@@ -1918,20 +1896,16 @@ summary:after {
     width: 50%;
   }
 
-  .md\:w-1\/3{
-    width: 33.333333%;
+  .md\:w-full{
+    width: 100%;
   }
 
-  .md\:max-w-full{
-    max-width: 100%;
+  .md\:max-w-md{
+    max-width: 28rem;
   }
 
   .md\:flex-row{
     flex-direction: row;
-  }
-
-  .md\:flex-row-reverse{
-    flex-direction: row-reverse;
   }
 
   .md\:gap-16{
@@ -1966,10 +1940,6 @@ summary:after {
 
   .md\:pt-8{
     padding-top: 2rem;
-  }
-
-  .md\:pt-24{
-    padding-top: 6rem;
   }
 
   .md\:pl-12{
