--- a/input.css
+++ b/input.css
@@ -202,6 +202,9 @@ h1:last-of-type {
   margin-top: 5px;
   color: var(--grayishBlue);
 }
+.form {
+  box-shadow: 10px 30px 40px -20px var(--grayishBlue);
+}
 
 .box:hover {
   box-shadow: 0px 30px 40px -20px var(--varyDarkBlue);
@@ -419,7 +422,7 @@ summary:after {
 
 .footer {
   /* background: #000; */
-  padding: 15px 0px;
+  padding: 10px 0px;
   text-align: center;
 }
 
@@ -508,3 +511,93 @@ summary:after {
 .form {
   box-shadow: 0px 30px 40px -20px var(--grayishBlue);
 } */
+
+main {
+  min-width: 300px;
+  max-width: 500px;
+  margin: auto;
+  position: relative;
+}
+
+main p {
+  font-size: 1em;
+  line-height: 1.75em;
+  border-top: 3px solid;
+  -o-border-image: linear-gradient(
+    to right,
+    #0fcab2,
+    #51d5aa,
+    #78dfa2,
+    #9ce99c,
+    #bff197
+  );
+  border-image: linear-gradient(
+    to right,
+    #0fcab2,
+    #51d5aa,
+    #78dfa2,
+    #9ce99c,
+    #bff197
+  );
+  border-image-slice: 1;
+  /* border-width: 2px; */
+  margin: 0;
+  padding: 40px;
+  counter-increment: section;
+  position: relative;
+  color: #34435e;
+}
+main p:before {
+  content: counter(section);
+  position: absolute;
+  border-radius: 50%;
+  padding: 5px;
+  height: 30px;
+  width: 30px;
+  background-color: #2b444e;
+  text-align: center;
+  line-height: 1.25em;
+  color: #ffffff;
+  font-size: 1em;
+}
+
+main p:nth-child(odd) {
+  border-right: 2px solid;
+  /* border-bottom-right-radius: 100px; */
+  padding-left: 0;
+  border-left: none;
+}
+main p:nth-child(odd):before {
+  right: 0%;
+  margin-right: -15px;
+  margin-top: 15px;
+}
+
+main p:nth-child(even) {
+  border-left: 2px solid;
+  border-radius: 10px;
+  padding-right: 0;
+  border-right: none;
+}
+main p:nth-child(even):before {
+  left: 0%;
+  margin-left: -15px;
+  margin-top: 15px;
+}
+
+main p:first-child {
+  border-top: none;
+  border-left: none;
+}
+
+main p:last-child {
+  border-bottom: none;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+#service {
+  height: fit-content;
+  /* background-color: black; */
+  width: 100%;
+  padding: 50px 10px;
+}
