--- a/input.css
+++ b/input.css
@@ -422,6 +422,10 @@ summary:after {
 
 .footer {
   /* background: #000; */
+  /* position: fixed; */
+  /* bottom: 0; */
+  /* left: 0; */
+  /* width: 100%; */
   padding: 10px 0px;
   text-align: center;
 }
@@ -471,7 +475,7 @@ summary:after {
 
 @media (max-width: 720px) {
   .footer {
-    text-align: left;
+    text-align: center;
     padding: 5%;
   }
   .footer .row ul li {
