--- a/css/main.css
+++ b/css/main.css
@@ -543,6 +543,10 @@ video {
   }
 }
 
+.static{
+  position: static;
+}
+
 .fixed{
   position: fixed;
 }
@@ -553,6 +557,10 @@ video {
 
 .relative{
   position: relative;
+}
+
+.sticky{
+  position: sticky;
 }
 
 .top-0{
@@ -587,8 +595,20 @@ video {
   right: 1rem;
 }
 
+.bottom-0{
+  bottom: 0px;
+}
+
 .z-50{
   z-index: 50;
+}
+
+.z-10{
+  z-index: 10;
+}
+
+.-z-10{
+  z-index: -10;
 }
 
 .mx-auto{
@@ -609,10 +629,6 @@ video {
   margin-top: 2.5rem;
 }
 
-.mt-24{
-  margin-top: 6rem;
-}
-
 .mb-4{
   margin-bottom: 1rem;
 }
@@ -629,12 +645,12 @@ video {
   margin-top: 1rem;
 }
 
-.mt-16{
-  margin-top: 4rem;
-}
-
 .mt-28{
   margin-top: 7rem;
+}
+
+.mt-16{
+  margin-top: 4rem;
 }
 
 .mb-8{
@@ -685,13 +701,13 @@ video {
   height: 100vh;
 }
 
-.h-auto{
-  height: auto;
-}
-
 .h-fit{
   height: -moz-fit-content;
   height: fit-content;
+}
+
+.h-auto{
+  height: auto;
 }
 
 .h-px{
@@ -790,10 +806,6 @@ video {
 
 .flex-col{
   flex-direction: column;
-}
-
-.flex-col-reverse{
-  flex-direction: column-reverse;
 }
 
 .flex-wrap{
@@ -1776,6 +1788,7 @@ main {
   max-width: 500px;
   margin: auto;
   position: relative;
+  padding: 0 5px;
 }
 
 main p {
@@ -1864,6 +1877,12 @@ main p:last-child {
   /* background-color: black; */
   width: 100%;
   padding: 50px 10px;
+}
+
+@media only screen and (max-width: 1170px) {
+  #index-img {
+    width: 200px;
+  }
 }
 
 .hover\:bg-accent:hover{
