--- a/css/main.css
+++ b/css/main.css
@@ -559,10 +559,6 @@ video {
   position: relative;
 }
 
-.sticky{
-  position: sticky;
-}
-
 .top-0{
   top: 0px;
 }
@@ -579,8 +575,16 @@ video {
   right: 1.5rem;
 }
 
+.bottom-0{
+  bottom: 0px;
+}
+
 .-left-64{
   left: -16rem;
+}
+
+.top-2{
+  top: 0.5rem;
 }
 
 .-right-64{
@@ -595,8 +599,20 @@ video {
   right: 1rem;
 }
 
-.bottom-0{
-  bottom: 0px;
+.-top-10{
+  top: -2.5rem;
+}
+
+.-top-20{
+  top: -5rem;
+}
+
+.-top-5{
+  top: -1.25rem;
+}
+
+.-top-8{
+  top: -2rem;
 }
 
 .z-50{
@@ -685,6 +701,22 @@ video {
   margin-top: 1.5rem;
 }
 
+.mt-12{
+  margin-top: 3rem;
+}
+
+.mt-14{
+  margin-top: 3.5rem;
+}
+
+.mt-32{
+  margin-top: 8rem;
+}
+
+.mt-24{
+  margin-top: 6rem;
+}
+
 .block{
   display: block;
 }
@@ -699,6 +731,10 @@ video {
 
 .h-\[100vh\]{
   height: 100vh;
+}
+
+.h-1\/2{
+  height: 50%;
 }
 
 .h-fit{
@@ -738,16 +774,16 @@ video {
   width: 250px;
 }
 
-.w-full{
-  width: 100%;
+.w-screen{
+  width: 100vw;
 }
 
 .w-1\/2{
   width: 50%;
 }
 
-.w-screen{
-  width: 100vw;
+.w-full{
+  width: 100%;
 }
 
 .w-2\/3{
@@ -774,12 +810,40 @@ video {
   width: 33.333333%;
 }
 
+.w-\[10px\]{
+  width: 10px;
+}
+
+.w-\[100px\]{
+  width: 100px;
+}
+
+.w-\[50px\]{
+  width: 50px;
+}
+
+.w-60{
+  width: 15rem;
+}
+
+.w-44{
+  width: 11rem;
+}
+
+.w-64{
+  width: 16rem;
+}
+
 .max-w-md{
   max-width: 28rem;
 }
 
 .max-w-lg{
   max-width: 32rem;
+}
+
+.max-w-sm{
+  max-width: 24rem;
 }
 
 .shrink-0{
@@ -915,6 +979,22 @@ video {
   border-radius: 0.25rem;
 }
 
+.rounded-tl-xl{
+  border-top-left-radius: 0.75rem;
+}
+
+.rounded-tr-xl{
+  border-top-right-radius: 0.75rem;
+}
+
+.rounded-tr-3xl{
+  border-top-right-radius: 1.5rem;
+}
+
+.rounded-br-3xl{
+  border-bottom-right-radius: 1.5rem;
+}
+
 .border{
   border-width: 1px;
 }
@@ -966,6 +1046,16 @@ video {
   background-color: rgb(12 105 128 / var(--tw-bg-opacity));
 }
 
+.bg-accent{
+  --tw-bg-opacity: 1;
+  background-color: rgb(1 211 175 / var(--tw-bg-opacity));
+}
+
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#0f6d6d\]{
   --tw-bg-opacity: 1;
   background-color: rgb(15 109 109 / var(--tw-bg-opacity));
@@ -984,11 +1074,6 @@ video {
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.bg-accent{
-  --tw-bg-opacity: 1;
-  background-color: rgb(1 211 175 / var(--tw-bg-opacity));
 }
 
 .object-contain{
@@ -1064,6 +1149,11 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .pt-4{
   padding-top: 1rem;
 }
@@ -1086,6 +1176,10 @@ video {
 
 .pb-2{
   padding-bottom: 0.5rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
 }
 
 .text-left{
@@ -1753,12 +1847,20 @@ summary:after {
   }
 }
 
-#intro {
-  background-image: url("../img/bg.png");
-  background-size: 1300px 700px;
-  background-repeat: no-repeat;
-  /* object-fit: contain; */
-}
+/* #intro {
+  /* background-color: red; */
+
+/* background-image: url("../img/bg.png"); */
+
+/* z-index: -1; */
+
+/* background-size: 100% 100%; */
+
+/* background-repeat: no-repeat; */
+
+/* object-fit: fill; */
+
+/* } */
 
 .navbarColor {
   transition: all 0.1s ease;
@@ -1879,11 +1981,12 @@ main p:last-child {
   padding: 50px 10px;
 }
 
+/* 
 @media only screen and (max-width: 1170px) {
   #index-img {
     width: 200px;
   }
-}
+} */
 
 .hover\:bg-accent:hover{
   --tw-bg-opacity: 1;
@@ -1927,6 +2030,10 @@ main p:last-child {
 }
 
 @media (min-width: 768px){
+  .md\:top-0{
+    top: 0px;
+  }
+
   .md\:mb-0{
     margin-bottom: 0px;
   }
