--- a/input.css
+++ b/input.css
@@ -488,12 +488,14 @@ summary:after {
   }
 }
 
-#intro {
-  background-image: url("../img/bg.png");
-  background-size: 1300px 700px;
-  background-repeat: no-repeat;
-  /* object-fit: contain; */
-}
+/* #intro {
+  /* background-color: red; */
+/* background-image: url("../img/bg.png"); */
+/* z-index: -1; */
+/* background-size: 100% 100%; */
+/* background-repeat: no-repeat; */
+/* object-fit: fill; */
+/* } */
 .navbarColor {
   transition: all 0.1s ease;
   background-color: white;
@@ -606,9 +608,9 @@ main p:last-child {
   width: 100%;
   padding: 50px 10px;
 }
-
+/* 
 @media only screen and (max-width: 1170px) {
   #index-img {
     width: 200px;
   }
-}
+} */
